tests/errors/sem.expected-return-all-branches.funcdef.or
main :: () -> void {
    () -> sint {
        x := true;
        if x then return 10;
    };
};

